works on grid component

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vue Bulma</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css" />
 </head>
 <body>
     <div id="app">
-        <vb-section>
-            hello
-        </vb-section>
+        <bm-section>
+            <bm-grid>
+                <bm-column :size="2">
+                    <p>hello</p>
+                </bm-column>
+                <bm-column>
+                    <p>hello</p>
+                </bm-column>
+            </bm-grid>
+        </bm-section>
     </div>
     <script src="/dist/build.js"></script>
 </body>
