WIP works on mixin refactor

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 >
                     <p>hello</p>
                 </bm-column>
-            </bm-grid>
+            </bm-columns>
         </bm-section>
     </div>
     <script src="/dist/build.js"></script>
