fixes export bug

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div id="app">
-        <bm-section>
+        <bm-section size="medium">
             <bm-columns
-                breakpoint="mobile"
+                responsive="mobile"
                 gapless
                 multiline
             >
                 <bm-column
-                    :breakpoints="{
+                    :responsive="{
                         mobile: 'half',
                         tablet: 'one-third',
                         desktop: 'one-quarter',
