--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <div id="app">
         <bm-container fluid>
+            <bm-section>
+                <bm-content>
+                    <h1>Buttons</h1>
+                    <bm-button
+                        size="medium"
+                    >Button!</bm-button>
+                </bm-content>
+            </bm-section>
             <bm-section size="medium">
                 <bm-columns
                     responsive="mobile"
