works on Button component

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                     <h1>Buttons</h1>
                     <bm-button
                         size="medium"
+                        theme="primary"
+                        :styles="[
+                            'outlined',
+                        ]"
                     >Button!</bm-button>
                 </bm-content>
             </bm-section>
