refactors style mixin class

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
                     <bm-button
                         size="medium"
                         theme="primary"
-                        :styles="[
+                        :state="[
                             'outlined',
+                        ]"
+                        icon="github"
+                    >Github</bm-button>
+                    <bm-button
+                        theme="primary"
+                        :state="[
+                            'focused',
+                            'hovered',
+                            'disabled',
                         ]"
                     >Button!</bm-button>
                 </bm-content>
