adds control component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <bm-container fluid>
             <bm-section>
                 <bm-content>
+                    <h1>Control</h1>
+                    <bm-control grouped addons>
+                        <p>
+                            hello
+                        </p>
+                    </bm-control>
                     <h1>Buttons</h1>
                     <bm-button
                         size="medium"
