feat (form): works on form components

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <bm-input
                     theme="info"
                     bm-type="text"
+                    value="some value"
                 >
                     <bm-label slot="label">Name</bm-label>
                     <bm-help slot="help" validation="danger">This username is available</bm-help>
@@ -24,6 +25,10 @@
                     <bm-label slot="label">Email Address</bm-label>
                     <bm-help slot="help" validation="success">This email is available</bm-help>
                 </bm-input>
+                <bm-textarea size="small" theme="info" value="hello">
+                    <bm-label slot="label">Comments</bm-label>
+                    <bm-help slot="help">This email is available</bm-help>
+                </bm-textarea>
             </bm-section>
             <bm-section>
                 <bm-content>
